# simulator-8085

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: bus.h  vm.h
include/cpu/: cpu.h  registers.h
include/memory/: registers.h
src/: main.c
src/executor/: bus.c  vm.c
src/executor/cpu/: registers.c
src/memory/: registers.c
